调整子任务积分与验收流程